--- a/app/src/main/res/layout/fragment_dolg_post.xml
+++ b/app/src/main/res/layout/fragment_dolg_post.xml
@@ -12,13 +12,17 @@
     <TextView
         android:id="@+id/sdelDolgPost"
         android:layout_width="match_parent"
-        android:layout_height="195dp"
+        android:layout_height="170dp"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@color/purple_300"
+        android:textSize="100sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97" />
+        app:layout_constraintVertical_bias="0.939" />
 
     <TextView
         android:id="@+id/sdelDolgPostText"
@@ -41,13 +45,14 @@
         android:layout_width="109dp"
         android:layout_height="77dp"
         android:text="+"
+        android:gravity="center|top"
         android:textSize="41sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.052"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.455" />
+        app:layout_constraintVertical_bias="0.444" />
 
     <ProgressBar
         android:id="@+id/dolgPostProgressBar"
@@ -73,33 +78,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.525" />
+        app:layout_constraintVertical_bias="0.538" />
 
     <Button
         android:id="@+id/minusDolgPost"
         android:layout_width="109dp"
         android:layout_height="77dp"
         android:text="-"
+        android:gravity="center|top"
         android:textSize="41sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.947"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.455" />
+        app:layout_constraintVertical_bias="0.444" />
 
     <TextView
         android:id="@+id/ostDolgPostText"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="Осталось"
+        android:layout_width="168dp"
+        android:layout_height="60dp"
         android:gravity="center"
+        android:text="Осталось"
         android:textColor="@color/purple_300"
-        android:textStyle="bold"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -107,13 +113,33 @@
     <TextView
         android:id="@+id/ostDolgPost"
         android:layout_width="match_parent"
-        android:layout_height="195dp"
+        android:layout_height="170dp"
+        android:gravity="center"
+        android:textColor="@color/purple_300"
+        android:textSize="100sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
+        app:layout_constraintVertical_bias="0.119" />
+
+    <TextView
+        android:id="@+id/backPost"
+        android:layout_width="93dp"
+        android:layout_height="57dp"
+        android:clickable="true"
+        android:gravity="bottom"
+        android:onClick="onClickView"
+        android:text="⇜"
+        android:textColor="@color/purple_300"
+        android:textSize="65sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
